[workspace]
members = ["program", "script"]
resolver = "2"

[workspace.dependencies]
bincode = "1.3.3"
alloy-sol-types = "0.8.6"
swiftness = { git = "https://github.com/iosis-tech/swiftness.git", default-features = false, features = [
    "starknet_with_keccak", "keccak_160_lsb", "stone5"
], branch = "sp1_patch"}
swiftness_air = { git = "https://github.com/iosis-tech/swiftness.git", default-features = false, features = [
    "starknet_with_keccak", "stone5"
], branch = "sp1_patch"}