[package]
version = "0.1.0"
name = "swiftness-script"
edition = "2021"
default-run = "swiftness"

[[bin]]
name = "swiftness"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "2.0.0"
serde_json = { version = "1.0.128", default-features = false, features = ["alloc"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
clap = { version = "4.5.19", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }

swiftness = { workspace = true }
swiftness_air = { workspace = true }

[build-dependencies]
sp1-helper = "2.0.0"
